po-example.yaml
---
apiVersion: v1
kind: Pod
metadata: 
  name: po-example
spec: 
  containers: 
  - name: ctr-example
    image: httpd
...
