pod-sample-env-variable.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-sample
spec:
  containers:
  - name: apache
    image: httpd
...
