pod-sample-withVol.yaml
---
apiVersion: v1
kind: Pod
metadata: 
  name: pod-sample
spec:
  volumes:
  - name: volume1
    secret: 
      secretName: secret-sample
  containers:
  - name: apache
    image: httpd
    volumeMounts: 
    - name: volume1
      mountPath: /tmp/apache
...
