svc-lb-007.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-lb-007
spec: 
  type: LoadBalancer
  selector:
    tag: label-kubetrain
  ports: 
  - name: port-lb-kubetrain
    protocol: TCP
    port: 8080                    # service port
    targetPort: 80                # container port
...
