svc-np-006.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-np-006
spec: 
  selector:
    tag: lable-kubetrain
  ports: 
  - name: port-np-kubetrain
    port: 8080
    targetPort: 80
  type: NodePort
...
